tests/cases/should_fail/literals/integer_literal_too_large.hash
// run=fail, stage=parse

k := 23384912398412397432849123413027948091234809213480923409823231498;
