tests/cases/should_fail/literals/integer_literal_too_large.stderr
error: malformed numerical literal. number too large to fit in target type.
 --> $DIR/integer_literal_too_large.hash:1:6
1 |   k := 23384912398412397432849123413027948091234809213480923409823231498;
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ here
